--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>TesteAmigoSecreto</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringMVCAngularJSService Maven Webapp</name>
+	<name>Teste Amigo Secreto</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<junit.version>3.8.1</junit.version>
